## version 1.0.4

- `spiral_initialize_by_time()`: `start` can only be set and `end` is automatically calculated based on `start` and `period`.

## version 1.0.3

- Move ComplexHeatmap to Suggests.
- Add `period` argument in `spiral_initializer()`.

## version 1.0.2

- Add function `cartesian_to_xy()`.
- Add function `is_in_track()`.
- Argument `height` can be set as a unit object in `spiral_track()`.
- Fixed a bug when `reverse_y = FALSE` in `spiral_track()`.
- Add options `curved_inside` and `curved_outside` in `spiral_raster()`.

## version 1.0.1

- New submission to CRAN